--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,19 @@
 
   <body class="flex flex-col min-h-screen">
     <%= render 'shared/header' %>
+    <% flash.each do |key, message| %>
+      <div class="mx-auto mt-6 max-w-2xl text-center p-4 rounded-lg
+        <%=
+          case key
+          when 'notice' then 'bg-green-100 text-green-800'
+          when 'alert'  then 'bg-red-100 text-red-800'
+          else 'bg-gray-100 text-gray-800'
+          end
+        %>">
+        <%= message %>
+      </div>
+    <% end %>
+
 
     <main class="flex-grow container mx-auto px-5">
       <%= yield %>
